todo-app/manifests/todo-backend-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      securityContext:
        fsGroup: 1000 # Grants appuser write access to the mounted database volume
      volumes:
        - name: todo-backend-vol
          persistentVolumeClaim:
            claimName: todo-backend-pvc
      containers:
        - name: todo-backend
          image: ushakiran369/todo-backend:2.8.v3
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: todo-backend-vol
              mountPath: /app/data # Safely mounts here without burying the binary
