todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: NodePort
  selector:
    app: todo-app              # This is the app as declared in the deployment.
  ports:
    - name: http
      nodePort: 30080          # port exposed for external access
      protocol: TCP
      port: 1234               # port exposed for internal access
      targetPort: 3000         # the target port
