todo-app/manifests/todo-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-svc
spec:
  selector:
    app: todo-frontend
  ports:
    - port: 1234         # This matches our Ingress rule
      targetPort: 3000
